update room
