# service/src/main/java/com/ironia/realmeet/controller/RoomController.java
@@ -6,6 +6,7 @@ import static java.util.concurrent.CompletableFuture.supplyAsync;
 import com.ironia.realmeet.api.facade.RoomsApi;
 import com.ironia.realmeet.api.model.CreateRoomDTO;
 import com.ironia.realmeet.api.model.RoomDTO;
+import com.ironia.realmeet.api.model.UpdateRoomDTO;
 import com.ironia.realmeet.service.RoomService;
 import com.ironia.realmeet.util.ResponseEntityUtils;
 import java.util.concurrent.CompletableFuture;
@@ -37,6 +38,12 @@ public class RoomController implements RoomsApi {
     @Override
     public CompletableFuture<ResponseEntity<Void>> deleteRoom(Long id) {
         return runAsync(() -> roomService.deleteRoom(id), controllersExecutor)
+            .thenApply(ResponseEntityUtils::noContent);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> updateRoom(Long id, UpdateRoomDTO updateRoomDTO) {
+        return runAsync(() -> roomService.updateRoom(id, updateRoomDTO), controllersExecutor)
             .thenApply(ResponseEntityUtils::noContent);
     }
 }
