# service/src/main/java/com/ironia/realmeet/validator/RoomValidator.java
@@ -2,9 +2,12 @@ package com.ironia.realmeet.validator;
 
 import static com.ironia.realmeet.validator.ValidatorConstants.*;
 import static com.ironia.realmeet.validator.ValidatorUtils.*;
+import static java.util.Objects.isNull;
 
 import com.ironia.realmeet.api.model.CreateRoomDTO;
+import com.ironia.realmeet.api.model.UpdateRoomDTO;
 import com.ironia.realmeet.domain.repository.RoomRepository;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -22,7 +25,21 @@ public class RoomValidator {
             validateName(createRoomDTO.getName(), validationErrors) &&
             validateSeats(createRoomDTO.getSeats(), validationErrors)
         ) {
-            validateNameDuplicate(createRoomDTO.getName(), validationErrors);
+            validateNameDuplicate(null, createRoomDTO.getName(), validationErrors);
+        }
+
+        throwOnError(validationErrors);
+    }
+
+    public void validate(Long roomId, UpdateRoomDTO updateRoomDTO) {
+        var validationErrors = new ValidationErrors();
+
+        if (
+            validateRequired(roomId, ROOM_ID, validationErrors) &&
+            validateName(updateRoomDTO.getName(), validationErrors) &&
+            validateSeats(updateRoomDTO.getSeats(), validationErrors)
+        ) {
+            validateNameDuplicate(roomId, updateRoomDTO.getName(), validationErrors);
         }
 
         throwOnError(validationErrors);
@@ -43,9 +60,15 @@ public class RoomValidator {
         );
     }
 
-    public void validateNameDuplicate(String name, ValidationErrors validationErrors) {
+    public void validateNameDuplicate(Long roomIdToExclude, String name, ValidationErrors validationErrors) {
         roomRepository
             .findByNameAndActive(name, true)
-            .ifPresent(__ -> validationErrors.add(new ValidationError(ROOM_NAME, ROOM_NAME + DUPLICATE)));
+            .ifPresent(
+                room -> {
+                    if (!isNull(roomIdToExclude) && !Objects.equals(room.getId(), roomIdToExclude)) {
+                        validationErrors.add(new ValidationError(ROOM_NAME, ROOM_NAME + DUPLICATE));
+                    }
+                }
+            );
     }
 }
