# service/src/main/resources/api.yml
@@ -50,6 +50,32 @@ paths:
           description: 'Deactivated Successfully.'
         404:
           description: Not Found
+    put:
+      summary: 'Update a room by id'
+      operationId: updateRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          required: true
+          in: path
+          description: ID of the room
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateRoomDTO'
+        required: true
+      responses:
+        204:
+          description: 'Updated Successfully.'
+        404:
+          description: Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
   /rooms:
     post:
       summary: 'Creates a room'
@@ -63,7 +89,7 @@ paths:
               $ref: '#/components/schemas/CreateRoomDTO'
         required: true
       responses:
-        '201':
+        201:
           description: Created
           content:
             application/json:
@@ -74,13 +100,17 @@ paths:
 
 components:
   schemas:
-    CreateRoomDTO:
+    UpdateRoomDTO:
       type: object
       properties:
         name:
           type: string
         seats:
           type: integer
+    CreateRoomDTO:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/UpdateRoomDTO'
     RoomDTO:
       type: object
       allOf:
